--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,3 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer components {
+    .center {
+        @apply flex items-center justify-center
+    }
+}
